--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -1,11 +1,22 @@
-body{
-	padding:0;
-	margin:0;
-	background:red;
-	height:100vh;
-	div{
-		background:green;
-		width: percentage(5/7);
-		font-size: 20px;
+#test{
+	display: flex;
+	padding:30px 0;
+	justify-content: center;
+	flex-wrap: wrap;
+	.touch-box{
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		.target{
+			width: 60vw;
+			height: 80vh;
+			background: skyblue;
+		}
+	}
+	.info{
+		text-align: center;
+		color:#333;
+		padding:20px;
 	}
 }
