--- a/app/css/index.css
+++ b/app/css/index.css
@@ -24,6 +24,9 @@
         max-height: 90vh;
         max-width: 100vw; }
   #test .info {
+    position: fixed;
+    bottom: 10px;
+    z-index: 999;
     text-align: center;
     color: #333;
     padding: 20px; }
